--- a/main.html
+++ b/main.html
@@ -7,7 +7,16 @@
 
   <body>
     <!-- write the body here -->
-
+	  <form id="form">
+	  <label>age</label>
+	  <input id="age" type="number" required >
+	  <br>
+		  <label>name</label>
+	  
+	  <input id="name" type="text" required>
+	  <br>
+	  <button id="btn" type="submit">Submit</button>
+	  </form>
     <script type="text/javascript" src="./script.js"></script>
   </body>
 </html>
